# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yaml
.sqlx/: query-285fdc00483d857758642a56ea84f289c5a86fdc77954f9802b0cbff545c304b.json  query-607795f1a13644cff2bb73e8d7daa84dfa6881663b61af2df40aafca94479d74.json  query-821c0d620a93b87bd16b2a51ceed50c4e83aea57504142fcc137d234ec029f0a.json  query-8e51bb83fdb769e2329b0a047f7338e16a7ae030253a91433540381d9d6f2f0a.json  query-91f0f55753aaffb81eda0c6ebc80cb6a0f4f1f4e865b971a0e16bc53e28856f2.json  query-a103f45ba653a85a8172cc56e902fc2df92178617f702c3d6c08c8a48a6e16ee.json  query-b2ca089ff49e7c1f70902aa9289771f67f2a74aac42c039d8fbe0900cbf235d6.json  query-c61808893bed9f919bb9ddf5c6a09ed4c44f862a4ebd9c6d2595a4247f86a228.json  query-df36283997490dd38f3b44ce31fc042236f121288c65aeb47918ed832398ae25.json  query-eb49ee8785a9260426ae0f9478ece914591954a061274c29fe05b3419d1ea1de.json
configuration/: configuration.yaml  local.yaml  production.yaml
migrations/: 20251230104159_add_status_subscription.sql  20251230135516_add_a_status_for_previous_users.sql  20251230140140_create_new_table_for_token.sql  20260104162334_seed_user.sql
scripts/: init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: dashboard.rs  log_out.rs  mod.rs  newsletter.rs  subscriptions.rs  (+1 more)
tests/: health_check.rs
(+18 files in other folders)
