[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4"
chrono = "0.4.42"
config = "0.15.19"
reqwest = {version = "0.12.28", features = ["json", "rustls-tls"]}
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1.0.228", features = ["derive"]}
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",  
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2"
once_cell = "1.21.3"
secrecy = {version = "0.8", features=["serde"]}
tracing-actix-web = "0.7.20"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
rand = {version = "0.9.2", features = ["std_rng"]}
thiserror = "2.0.17"
anyhow = "1.0.100"
base64 = "0.22.1"


[dev-dependencies]
fake = "4.4"
claim = "0.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.6.5"
serde_json = "1.0.148"
linkify = "0.10.0"
